:bug: - fix: fixed z-index on the tooltip

--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -5,10 +5,12 @@
   border-radius: var(--border-radius-l);
   background-color: var(--typography-color-background);
   border: 2px solid var(--typography-color-border);
+  z-index: -1 !important;
 
   &--open {
     opacity: 1;
     transform: scale(1);
+    z-index: 1 !important;
   }
 
   &__arrow {
